# reshape

./: CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE.md  README.md  build.rs
.github/workflows/: lint.yaml  publish-crate.yaml  publish-docker.yaml  release.yaml  test.yaml
cross/: Dockerfile.aarch64  Dockerfile.i686  Dockerfile.x86_64
src/: db.rs  helpers.rs  lib.rs  main.rs  schema.rs  state.rs
src/docs/: index.md  mod.rs  workflow.md
src/docs/actions/: add-column.md  add-foreign-key.md  add-index.md  alter-column.md  alter-enum.md  create-enum.md  create-table.md  custom.md  remove-column.md  remove-enum.md  remove-foreign-key.md  remove-index.md  remove-table.md  rename-table.md
src/migrations/: add_column.rs  add_foreign_key.rs  add_index.rs  alter_column.rs  common.rs  create_enum.rs  create_table.rs  custom.rs  mod.rs  remove_column.rs  remove_enum.rs  remove_foreign_key.rs  remove_index.rs  remove_table.rs  rename_table.rs
tests/: add_column.rs  add_foreign_key.rs  add_index.rs  alter_column.rs  common.rs  complex.rs  create_enum.rs  create_table.rs  custom.rs  failure.rs  remove_column.rs  remove_enum.rs  remove_foreign_key.rs  remove_index.rs  remove_table.rs  rename_table.rs
