[package]
name = "reshape"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1.7"
anyhow = "1.0.44"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
toml = "0.5"
version = "3.0.0"
colored = "2"
bimap = "0.6.1"