[package]
name = "reshape"
version = "0.4.0"
description = "An easy-to-use, zero-downtime schema migration tool for Postgres"
homepage = "https://github.com/fabianlindfors/reshape"
documentation = "https://github.com/fabianlindfors/reshape"
repository = "https://github.com/fabianlindfors/reshape"
license = "MIT"
keywords = ["postgres", "migrations"]
edition = "2021"
authors = ["Fabian Lindfors"]

[dependencies]
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1.7"
anyhow = { version = "1.0.44", features = ["backtrace"] }
clap = { version = "3.0.0", features = ["derive"] }
toml = "0.5"
version = "3.0.0"
colored = "2"
rand = "0.8"