[package]
name = "reshape"
version = "0.7.0"
description = "An easy-to-use, zero-downtime schema migration tool for Postgres"
homepage = "https://github.com/fabianlindfors/reshape"
documentation = "https://github.com/fabianlindfors/reshape"
repository = "https://github.com/fabianlindfors/reshape"
license = "MIT"
keywords = ["postgres", "migrations"]
edition = "2021"
authors = ["Fabian Lindfors"]
rust-version = "1.70"

[dependencies]
postgres = { version = "0.19.12", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
version = "3.0.0"
colored = "3"
rand = "0.9"
dotenv = "0.15.0"
lexical-sort = "0.3.1"
